@@ -51,6 +51,9 @@
 #define NORMAL_FONT_WIDTH 20
 #define NORMAL_FONT_HIGHT 30
 
+#define MIN_FONT_WEIGHT 4
+#define MAX_FONT_WEIGHT 1200
+
 #define MAX_LINE_HIGHT 50
 #define MIN_LINE_HIGHT 20
 
